[gd_scene load_steps=3 format=3 uid="uid://b1ec4ycq32277"]

[ext_resource type="Script" path="res://main_menu_page/workout_page/workoutResultPage/workout_done.gd" id="1_4eg03"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hqmbx"]
bg_color = Color(0.192157, 0.192157, 0.192157, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[node name="WorkoutDone" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4eg03")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 40
text = "NICE DONE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WorkoutTimeLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 25
text = "TIME: "

[node name="ExerciseResultContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 25

[node name="FinishButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_styles/normal = SubResource("StyleBoxFlat_hqmbx")
theme_override_styles/hover = SubResource("StyleBoxFlat_hqmbx")
theme_override_styles/pressed = SubResource("StyleBoxFlat_hqmbx")
theme_override_styles/disabled = SubResource("StyleBoxFlat_hqmbx")
theme_override_styles/focus = SubResource("StyleBoxFlat_hqmbx")
text = "FINISH"
